feat: implement statistical metadata anomaly detection engine and refactor DqsJob